@@ -1,5 +1,7 @@
 -------------------------
-2012-01-05	v0.0.2	
+2012-01-05  v0.0.2	
 -------------------------
-* Bug Fix: Validating that an option's value is in a set does not raise an exception when the value is empty?
+* Bug Fix: Validating that an option's value is in a set does not raise an Optout::OptionRequired 
+  exception when the value is #empty?
 * Optout#argv and Optout#shell raise an ArgumentError if they're not passed a Hash
+* Added required and optional methods
